themes/default/styles.css
/* ... */
html,body{
  height:100%;
}

/* main body attributes */
body {
  font-family: 'Droid Sans', Cantarell, Tahoma, Geneva,sans-serif;;
  font-size:.9em;
  margin:0px;
  background-color:  #FFFFFF;
  /* background-image:url('images/texture_bg.png'); */
}
p {
    /*text-align: justify;*/
  line-height: 150%;
  font-size: 1em;
}
p a {
  text-decoration: underline;
}
p a:visited {
  color: #3F2670;
  background-color: transparent;
}
p a:active {
  color: #A50707;
  background-color: transparent;
}
h1, h2, h3, h4, h5, h6 {
  color: #000000;
  clear: right;
  font: 100% Verdana, Helvetica, Arial, sans-serif;
  font-weight: bold;
  margin: 0;
  padding-top: 0.5em;
  /*border-bottom: 1px solid #B8AE9C;*/
}
h1 {
  font-size: 160%;
  color: #000;
}
h2 {
    font-size: 120%;
}
h3 {
    font-size: 100%;
}
h4 {
    font-size: 90%;
}
h5 {
    font-size: 100%;
}
p.subgroup {
  margin:0 0 0 2em;
}
/* list attributes */
ul {
  margin-bottom: 0px;
  margin-top: 0px;
  margin-right: 0px;
}
li {
  margin-bottom: 0px;
  margin-top: 0px;
  margin-right: 3px;
}
img {
  border: none;
}
ul.msg {
  line-height: 150%
}
li.msg_err, li.msg_info {
  margin-bottom: 30px;
  margin-top: 0px;
  margin-right: 10px;
  margin-left: 10px;
  font-size: 110%;
  list-style: none;
}

/* span attributes */
span.err_type{
  padding: .1em .5em;
  font-size: smaller;
}
span.msg{
  line-height: 150%;
}
span.congrats_msg{
  line-height: 120%;
  color: green;
  padding: 1em 1em;
  font-size: large;
  font-weight: bold;
  white-space:nowrap;
}
span.info_msg{
  line-height: 100%;
  color: blue;
  padding: 1em 1em;
  font-size: large;
  font-weight: bold;
}
span.padding_left {
  padding-left: 1em;
}
em {
  font-weight: bold;
}
span.small_font {
  font-size: smaller;
}

/* link attributes */
a:link, a:visited  {
  color: #1A4A72;
}
a:hover {
  color: #932318;
  color:#ffffff;
}
a:active {
  color: #932318;
}



/* align text to the left */
.left {
  text-align: left;
}

/* main submit button */

input[type=button] {
  cursor:pointer;
  border:outset 1px #ccc;
  font-weight:bold;
  padding: 1px 2px;
}
input[type=submit] {
  cursor:pointer;
  border:outset 1px #ccc;
  font-weight:bold;
}
input[type=text] {
  cursor:pointer;
  border-bottom:solid 1px #ccc;
  border-right:solid 1px #ccc;
  border-top:solid 1px #000;
  border-left:solid 1px #000;
  font-weight:bold;
  background:#fff;
  padding: 1px 2px;
}
.button:focus {
  border:1px solid #A50707;
  background-color:  #FFDAB9;  
}
/* small submit button at top */
.button2 {
  background-color: #E9F4F3;
}
.button2:focus {
  background-color: #E9F4F3;
  border:  #ACCFCC  solid 1px;
}
.center {
  text-align: center;
}
/* paging */
div.paging {
  width: 100%;
  text-align: center;
  margin: 0.5em auto;
  font-size: smaller;
}
div.paging ul {
  list-style: none;
  display: inline;
  padding: 0px;
}
div.paging li { 
  display: inline; 
  padding-left: 1px; 
  padding-right: 1px;
}
div.paging li a {
  padding-left: 4px;
  padding-right: 4px;
}
div.paging li a.current {
   color: #FFA20C;
}
div.paging li a:hover {
   color: #FFFFFF;
}
/* floating layout */
#contentwrapper{
  width: 98%;
  min-height:100%;
  height:100%;
  margin-left:auto;
  margin-right:auto;
  padding-bottom:3.8em;
}
#contentcolumn {
  margin-left: 0.5em;
  padding-right: 5px;
  margin-bottom:2.5em;
}
#contentcolumn_shiftright {
  margin-left: 18em;
}
#leftcolumn{
  height:100%;
  float: left;
  width: 17em;
  margin-left: 1px;
  background-color: #EBF4FA;
}
#footer{
  /*position:absolute;
  bottom:0px;
  position:absolute;
  bottom:0;*/
  background-color:#0D557A;
 
  /* background-image: url("images/mesh-pattern.jpg"); */
  background-repeat:repeat-x;
  background-size: 33px 81px;

  width: 100%;
  text-align: center;
  padding: 4px 0px;
  border-bottom: 3px solid #206ba4;
  color:#65a9d8;
}
#footer a{
 color: #ffffff;
}
#side-menu{
  overflow:hidden;
    margin-top:.5em;
    margin-bottom:.5em;
}

/* sequence links */
div#sequence-links {
  float:right;
  padding-right: 5px;
  padding-top:.3em;
}
div#sequence-links a {
  text-decoration: none;
}
div#sequence-links {
   white-space:nowrap;
   overflow:hidden;
}
div#sequence-links2{
    min-width: 22em;
    border-top: 1px solid #0D557A;
    padding-top:.1em;
}
div#sequence-links2 a:nth-child(1){
    float:left;
    width:40%;
    padding:1em 1em 1em 1em;
    overflow:hidden;

}
div#sequence-links2 a:nth-child(2){
    float:right;
    overflow:hidden;
    width:40%;
    text-align:right;
    padding:1em 1em 1em 1em;
    
}
div#sequence-links2  a:nth-child(1):active, div#sequence-links2 a:nth-child(1):focus, div#sequence-links2 a:nth-child(1):hover{
    box-shadow: -3px 3px #4CA7AA;
}
div#sequence-links2 a:nth-child(2):active, div#sequence-links2 a:nth-child(2):focus, div#sequence-links2 a:nth-child(2):hover{
    box-shadow: 3px 3px #4CA7AA;
}
div#sequence-links2 a{
  padding-top:.3em;
}
div#sequence-links2 a {
  text-decoration: none;
}
/***************************************************************/
/* NEW STUFF */
table.tabbed-table {
  width: 100%;
  border:1px black solid;
}
table.tabbed-table th#left-empty-tab {
  background-color: transparent;
  width: 15px;
  border-bottom: 1px solid #B8AE9C;
}
table.tabbed-table th#right-empty-tab {
  text-align: right;
  background-color: transparent;
  border-bottom: 1px solid #B8AE9C;
  width: 400px;
  padding-right: 5px;
}
table.tabbed-table th#right-empty-tab a {
  text-decoration: underline;
}
table.tabbed-table th.tab-spacer {
  background-color: transparent;
  width: 5px;
  border-bottom: 1px solid #B8AE9C;
}
table.tabbed-table td.tab-spacer {
  background-color: transparent;
  width: 5px;
  border-bottom: 1px solid #B8AE9C;
}


table.tabbed-table th.tab {
  padding-top: 2px;
  padding-bottom: 2px;
  width: 110px;
  background-color: #E9F4F3;
  border-bottom: 1px solid #B8AE9C;
  border-left: 1px solid #B8AE9C;
  border-top: 1px solid #B8AE9C;
  border-right: 1px solid #B8AE9C;
}
/* ... */

